--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>github</id>
+            <name>github</name>
+            <!-- It's important to have the raw subdomain -->
+            <url>{{https://github.com/CryptoMorin/XSeries/tree/master/src/main/java/com/cryptomorin/xseries}}</url>
+        </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -75,6 +81,11 @@
             <artifactId>lombok</artifactId>
             <version>1.18.12</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.cryptomorin</groupId>
+            <artifactId>XSeries</artifactId>
+            <version>1.16</version>
         </dependency>
     </dependencies>
 </project>
