--- a/src/main/resources/weight.yml
+++ b/src/main/resources/weight.yml
@@ -1,2 +1,120 @@
-acacia_door: 1.0
-acacia_fence: 1.0
+STONE:
+GRANITE:
+DIORITE:
+ANDESITE:
+GRASS:
+DIRT:
+COARSE_DIRT:
+MYCELIUM:
+PODZOL:
+COBBLESTONE:
+SAND:
+RED_SAND:
+SANDSTONE:
+RED_SANDSTONE:
+GRAVEL:
+SNOW:
+NETHERRACK:
+SOUL_SAND:
+GLOWSTONE:
+MAGMA_BLOCK:
+GOLD_NUGGET:
+IRON_NUGGET:
+COAL:
+CHARCOAL:
+LAPIS_LAZULI:
+REDSTONE:
+QUARTZ:
+EMERALD:
+DIAMOND:
+GLOWSTONE_DUST:
+FLINT:
+CLAY:
+OAK_LOG:
+SPRUCE_LOG:
+BIRCH_LOG:
+JUNGLE_LOG:
+ACACIA_LOG:
+DARK_OAK_LOG:
+COCOA_BEANS:
+NETHER_WART:
+CHORUS_FRUIT:
+WHEAT:
+SUGAR_CANE:
+DRIED_KELP:
+CACTUS:
+POTATO:
+CARROT:
+APPLE:
+STRING:
+SPIDER_EYE:
+MAGMA_CREAM:
+GUNPOWDER:
+BONE:
+SLIME_BALL:
+ENDER_PEARL:
+BLAZE_ROD:
+GHAST_TEAR:
+PRISMARINE_SHARD:
+PRISMARINE_CRYSTALS:
+BOW:
+ARROW:
+TRIDENT:
+DRAGON_BREATH:
+PHANTOM_MEMBRANE:
+FEATHER:
+LEATHER:
+EGG:
+INK_SAC:
+RABBIT_FOOT:
+TURTLE_EGG:
+ICE:
+OAK_LEAVES:
+SPRUCE_LEAVES:
+JUNGLE_LEAVES:
+BIRCH_LEAVES:
+ACACIA_LEAVES:
+DARK_OAK_LEAVES:
+COBWEB:
+BROWN_MUSHROOM_BLOCK:
+RED_MUSHROOM_BLOCK:
+BRAIN_CORAL:
+BUBBLE_CORAL:
+FIRE_CORAL:
+HORN_CORAL:
+TUBE_CORAL:
+OBSIDIAN:
+END_STONE:
+DEAD_BRAIN_CORAL:
+DEAD_BUBBLE_CORAL:
+DEAD_FIRE_CORAL:
+DEAD_HORN_CORAL:
+LILY_PAD:
+SADDLE:
+ELYTRA:
+OAK_SAPLING:
+SPRUCE_SAPLING:
+BIRCH_SAPLING:
+JUNGLE_SAPLING:
+DARK_OAK_SAPLING:
+ACACIA_SAPLING:
+SHULKER_SHELL:
+BROWN_MUSHROOM:
+RED_MUSHROOM:
+SEA_PICKLE:
+SCUTE:
+NAUTILUS_SHELL:
+HEART_OF_THE_SEA:
+SPONGE:
+
+#BTL O ENCHANT
+#MENDING
+#FROST-WALKER
+#VINES
+#WS HEAD
+#HORSE ARMOR
+#CHORUS FLOWER
+#CHORUS PLANT
+#FLOWERS
+#PLANTS
+#MUSIC DISCS
