Updated weight yml files

--- a/src/main/resources/weight.yml
+++ b/src/main/resources/weight.yml
@@ -1,28 +1,28 @@
-STONE:
-GRANITE:
+STONE: 2.515
+GRANITE: 2.691
 DIORITE:
-ANDESITE:
-GRASS:
-DIRT:
-COARSE_DIRT:
+ANDESITE: 2.771
+GRASS: 1.682
+DIRT: 1.602
+COARSE_DIRT: 1.442
 MYCELIUM:
 PODZOL:
-COBBLESTONE:
-SAND:
-RED_SAND:
-SANDSTONE:
-RED_SANDSTONE:
-GRAVEL:
-SNOW:
+COBBLESTONE: 1.602
+SAND: 1.442
+RED_SAND: 1.650
+SANDSTONE: 2.323
+RED_SANDSTONE: 2.573
+GRAVEL: 1.522
+SNOW: 0.481
 NETHERRACK:
 SOUL_SAND:
 GLOWSTONE:
 MAGMA_BLOCK:
-GOLD_NUGGET:
-IRON_NUGGET:
-COAL:
-CHARCOAL:
-LAPIS_LAZULI:
+GOLD_NUGGET: 0.238
+IRON_NUGGET: 0.097
+COAL: 1.346
+CHARCOAL: 0.208
+LAPIS_LAZULI: 2.650
 REDSTONE:
 QUARTZ:
 EMERALD:
