Finished adding weight values

--- a/src/main/resources/weight.yml
+++ b/src/main/resources/weight.yml
@@ -1,12 +1,12 @@
 STONE: 2.515
 GRANITE: 2.691
-DIORITE:
+DIORITE: 2.900
 ANDESITE: 2.771
 GRASS: 1.682
 DIRT: 1.602
 COARSE_DIRT: 1.442
-MYCELIUM:
-PODZOL:
+MYCELIUM: 1
+PODZOL: 1
 COBBLESTONE: 1.602
 SAND: 1.442
 RED_SAND: 1.650
@@ -14,98 +14,95 @@ SANDSTONE: 2.323
 RED_SANDSTONE: 2.573
 GRAVEL: 1.522
 SNOW: 0.481
-NETHERRACK:
-SOUL_SAND:
-GLOWSTONE:
-MAGMA_BLOCK:
+NETHERRACK: 1
+SOUL_SAND: 1
+MAGMA_BLOCK: 1
 GOLD_NUGGET: 0.238
 IRON_NUGGET: 0.097
 COAL: 1.346
 CHARCOAL: 0.208
 LAPIS_LAZULI: 2.650
-REDSTONE:
-QUARTZ:
-EMERALD:
-DIAMOND:
-GLOWSTONE_DUST:
-FLINT:
-CLAY:
-OAK_LOG:
-SPRUCE_LOG:
-BIRCH_LOG:
-JUNGLE_LOG:
-ACACIA_LOG:
-DARK_OAK_LOG:
-COCOA_BEANS:
-NETHER_WART:
-CHORUS_FRUIT:
-WHEAT:
-SUGAR_CANE:
-DRIED_KELP:
-CACTUS:
-POTATO:
-CARROT:
-APPLE:
-STRING:
-SPIDER_EYE:
-MAGMA_CREAM:
-GUNPOWDER:
-BONE:
-SLIME_BALL:
-ENDER_PEARL:
-BLAZE_ROD:
-GHAST_TEAR:
-PRISMARINE_SHARD:
-PRISMARINE_CRYSTALS:
-BOW:
-ARROW:
-TRIDENT:
-DRAGON_BREATH:
-PHANTOM_MEMBRANE:
-FEATHER:
-LEATHER:
-EGG:
-INK_SAC:
-RABBIT_FOOT:
-TURTLE_EGG:
-ICE:
-OAK_LEAVES:
-SPRUCE_LEAVES:
-JUNGLE_LEAVES:
-BIRCH_LEAVES:
-ACACIA_LEAVES:
-DARK_OAK_LEAVES:
-COBWEB:
-BROWN_MUSHROOM_BLOCK:
-RED_MUSHROOM_BLOCK:
-BRAIN_CORAL:
-BUBBLE_CORAL:
-FIRE_CORAL:
-HORN_CORAL:
-TUBE_CORAL:
-OBSIDIAN:
-END_STONE:
-DEAD_BRAIN_CORAL:
-DEAD_BUBBLE_CORAL:
-DEAD_FIRE_CORAL:
-DEAD_HORN_CORAL:
-LILY_PAD:
-SADDLE:
-ELYTRA:
-OAK_SAPLING:
-SPRUCE_SAPLING:
-BIRCH_SAPLING:
-JUNGLE_SAPLING:
-DARK_OAK_SAPLING:
-ACACIA_SAPLING:
-SHULKER_SHELL:
-BROWN_MUSHROOM:
-RED_MUSHROOM:
-SEA_PICKLE:
-SCUTE:
-NAUTILUS_SHELL:
-HEART_OF_THE_SEA:
-SPONGE:
+REDSTONE: 3.97
+QUARTZ: 2.65
+EMERALD: 2.72
+DIAMOND: 3.51
+GLOWSTONE_DUST: 0.250
+FLINT: 2.471
+CLAY: 1.600
+OAK_LOG: 0.750
+SPRUCE_LOG: 0.550
+BIRCH_LOG: 0.670
+JUNGLE_LOG: 0.820
+ACACIA_LOG: 0.700
+DARK_OAK_LOG: 0.630
+COCOA_BEANS: 0.593
+NETHER_WART: 0.750
+CHORUS_FRUIT: 0.500
+WHEAT: 0.769
+SUGAR_CANE: 0.272
+DRIED_KELP: 0.340
+CACTUS: 0.430
+POTATO: 0.630
+CARROT: 1.04
+APPLE: 0.787
+STRING: 1.300
+SPIDER_EYE: 1
+GUNPOWDER: 1.700
+BONE: 1.175
+SLIME_BALL: 1
+ENDER_PEARL: 1
+BLAZE_ROD: 2
+GHAST_TEAR: 0.5
+PRISMARINE_SHARD: 1
+PRISMARINE_CRYSTALS: 1
+TRIDENT: 2.5
+DRAGON_BREATH: 1
+PHANTOM_MEMBRANE: 1
+FEATHER: 0.0025
+LEATHER: 1.452
+EGG: 1.031
+INK_SAC: 1.0054
+RABBIT_FOOT: 0.750
+TURTLE_EGG: 1.5
+ICE: 0.920
+OAK_LEAVES: 0.375
+SPRUCE_LEAVES: 0.275
+JUNGLE_LEAVES: 0.410
+BIRCH_LEAVES: 0.335
+ACACIA_LEAVES: 0.350
+DARK_OAK_LEAVES: 0.315
+COBWEB: 1.300
+BROWN_MUSHROOM_BLOCK: 0.210
+RED_MUSHROOM_BLOCK: 0.210
+BRAIN_CORAL: 1.576
+BUBBLE_CORAL: 1.576
+FIRE_CORAL: 1.576
+HORN_CORAL: 1.576
+TUBE_CORAL: 1.576
+OBSIDIAN: 2.475
+END_STONE: 2
+DEAD_BRAIN_CORAL: 0.788
+DEAD_BUBBLE_CORAL: 0.788
+DEAD_FIRE_CORAL: 0.788
+DEAD_HORN_CORAL: 0.788
+LILY_PAD: 0.340
+SADDLE: 1
+ELYTRA: 1
+OAK_SAPLING: 0.1875
+SPRUCE_SAPLING: 0.1375
+BIRCH_SAPLING: 0.1675
+JUNGLE_SAPLING: 0.205
+DARK_OAK_SAPLING: 0.1575
+ACACIA_SAPLING: 0.175
+SHULKER_SHELL: 0.5
+BROWN_MUSHROOM: 0.0233
+RED_MUSHROOM: 0.0233
+SEA_PICKLE: 0.660
+SCUTE: 0.5
+NAUTILUS_SHELL: 0.5
+HEART_OF_THE_SEA: 1
+SPONGE: 0.530
+
 
 #BTL O ENCHANT
 #MENDING
